fixed comment text and style alignment

--- a/src/app/component/general/eco-news/filter-news/filter-news.component.css
+++ b/src/app/component/general/eco-news/filter-news/filter-news.component.css
@@ -29,7 +29,7 @@
 }
 
 .ul-eco-buttons a:hover .ul-eco-buttons-li {
-    color:#056B33; 
+    color:#056B33;
     border: 1px solid #056B33;
 }
 
@@ -76,26 +76,3 @@
 .closeNone{
     display: none;
 }
-
-/* .close::before,
-.close::after {
-    position: relative;
-    content: " ";
-    display: block;
-    top: 0px;
-    left: 4.3px;
-    margin: 0px 0px 0px 0px;
-    width: 1px;
-    height: 11px;
-    background:#fff;
-}
-
-.close::before {
-    transform: rotate(45deg);
-    top: -1px;
-}
-
-.close::after {
-    top: -11.7px;
-    transform: rotate(-45deg);
-} */
